Add Join Us page
Co-authored-by: Saad Siddiqui <SMS-NED16@users.noreply.github.com>
Co-authored-by: Muhammad Hasham Khalid <Muhammad-Hasham-Khalid@users.noreply.github.com>
Co-authored-by: Midha Tahir <MidhaTahir@users.noreply.github.com>
Co-authored-by: Amil Khanzada <amilkh@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<meta name="author" content="Team Virufy">
 
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<script src="https://kit.fontawesome.com/828decba15.js" crossorigin="anonymous"></script>
 
 	<!-- Favicon -->
 	<link rel="icon" href="images/logo.png" type="image/x-icon" />
@@ -36,6 +37,7 @@
 				<a href="#collaborators">Collaborators</a>
 				<a href="./team.html">Team</a>
 				<a href="./goals.html">Goals</a>
+				<a href="./join.html">Join Us</a>
 				<a href="https://www.gofundme.com/f/virufy" target="_blank">Donate</a>
 				<a href="mailto:info@virufy.org">Contact</a>
 			</nav>
@@ -211,16 +213,16 @@
 					<i class="icon fa-github fa-3x"></i>
 				</a>
 				<a href="https://www.linkedin.com/company/virufy/" target="_blank">
-					<i class="icon fa-linkedin fa-3x"></i>
+					<i class="icon fab fa-linkedin-in fa-3x"></i>
 				</a>
 				<a href="https://twitter.com/VirufyOrg" target="_blank">
 					<i class="icon fa-twitter fa-3x"></i>
 				</a>
 				<a href="https://www.facebook.com/groups/3114045451950734/" target="_blank">
-					<i class="icon fa-facebook fa-3x"></i>
+					<i class="icon fab fa-facebook-f fa-3x"></i>
 				</a>										
 				<a href="mailto:info@virufy.org">
-					<i class="icon fa-envelope fa-3x"></i>
+					<i class="fas fa-envelope fa-3x"></i>
 				</a>
 			</div>
 
