--- a/join.html
+++ b/join.html
@@ -57,13 +57,12 @@
     <div class="myrow">
         <div class="col col2">
             <h3 style="font-weight: bold;">Marketing</h3>
-            <p>We're in need of an experienced individual in global outreach, especially for nonprofits and fundraising, to help us devise a social media outreach plan.</p>
+            <p>We're in need of an experienced individual in global outreach, especially for nonprofits and fundraising. We need help to devise our social media outreach plan on various platforms (LinkedIn, Twitter, Facebook). </p>
         </div>
-
 
         <div class="col col2"> 
             <h3 style="font-weight: bold;">Content Designer</h3>
-            <p>Spreading the word about Virufy requires the use of many graphics and videos. Although our team has a few students skilled in content design, we seek help from an experienced mentor who can help us to develop globally-ready visual content.</p>
+            <p>Spreading the word about Virufy requires the use of many graphics and videos. Although our team has a few students skilled in content design, we seek help from an experienced mentor who can help us to develop globally-ready visual content for use on our website, social media channels, and mobile web app.</p>
         </div>
     </div>
     
