add ask for AI engineers

--- a/join.html
+++ b/join.html
@@ -64,6 +64,11 @@
             <h3 style="font-weight: bold;">Content Designer</h3>
             <p>Spreading the word about Virufy requires the use of many graphics and videos. Although our team has a few students skilled in content design, we seek help from an experienced mentor who can help us to develop globally-ready visual content for use on our website, social media channels, and mobile web app.</p>
         </div>
+
+				<div class="col col2">
+						<h3 style="font-weight: bold;">AI Engineers and Mentors</h3>
+						<p>Our team of students works with machine learning, deep learning, and signal analysis for audio, video, and textual analysis in a medical setting. We welcome students with experience in these domains and mentors with deep expertise that can guide us to build a robust solution as soon as possible.</p>
+				</div>
     </div>
     
     <div class="end">
