--- a/goals.html
+++ b/goals.html
@@ -75,7 +75,7 @@
 				<a href="https://twitter.com/VirufyOrg" target="_blank">
 					<i class="icon fa-twitter fa-3x"></i>
 				</a>
-				<a href="https://www.facebook.com/groups/3114045451950734/" target="_blank">
+				<a href="https://www.facebook.com/Virufy/" target="_blank">
 					<i class="icon fab fa-facebook-f fa-3x"></i>
 				</a>										
 				<a href="mailto:info@virufy.org">
