--- a/join.html
+++ b/join.html
@@ -19,7 +19,15 @@
     <script src="https://kit.fontawesome.com/828decba15.js" crossorigin="anonymous"></script>
 	<!-- Favicon -->
 	<link rel="icon" href="images/logo.png" type="image/x-icon" />
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165560709-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
+	  gtag('config', 'UA-165560709-1');
+	</script>
 </head>
 
 <body>
@@ -60,7 +68,7 @@
             <p>We're in need of an experienced individual in global outreach, especially for nonprofits and fundraising. We need help to devise our social media outreach plan on various platforms (LinkedIn, Twitter, Facebook). </p>
         </div>
 
-        <div class="col col2"> 
+        <div class="col col2">
             <h3 style="font-weight: bold;">Content Designer</h3>
             <p>Spreading the word about Virufy requires the use of many graphics and videos. Although our team has a few students skilled in content design, we seek help from an experienced mentor who can help us to develop globally-ready visual content for use on our website, social media channels, and mobile web app.</p>
         </div>
@@ -70,7 +78,7 @@
 						<p>Our team of students works with machine learning, deep learning, and signal analysis for audio, video, and textual analysis in a medical setting. We welcome students with experience in these domains and mentors with deep expertise that can guide us to build a robust solution as soon as possible.</p>
 				</div>
     </div>
-    
+
     <div class="end">
         <p>Please contact us if you'd like to volunteer!</p>
         <ul class="actions">
@@ -93,7 +101,7 @@
 				</a>
 				<a href="https://www.facebook.com/Virufy/" target="_blank">
 					<i class="icon fab fa-facebook-f fa-3x"></i>
-				</a>										
+				</a>
 				<a href="mailto:info@virufy.org">
 					<i class="fas fa-envelope fa-3x"></i>
 				</a>
