--- a/team.html
+++ b/team.html
@@ -20,7 +20,15 @@
 
 	<!-- Favicon -->
 	<link rel="icon" href="images/logo.png" type="image/x-icon" />
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165560709-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
+	  gtag('config', 'UA-165560709-1');
+	</script>
 </head>
 
 <body>
@@ -225,7 +233,7 @@
 							class="fa fa-linkedin fa-2x contact-icon"></a>
 					</footer>
 				</article>
-				
+
 				<article class="team-card">
 					<div class="image round">
 						<img src="images/team/asad.jpg" alt="Muhammad Asadullah">
@@ -264,7 +272,7 @@
 						<a href="https://www.linkedin.com/in/mnauf/" target="_blank"
 							class="fa fa-linkedin fa-2x contact-icon"></a>
 					</footer>
-				</article>				
+				</article>
 				<article class="team-card">
 					<div class="image round">
 						<img src="images/team/zayyan.jpg" alt="Zayyan Usmani">
@@ -460,7 +468,7 @@
 				</a>
 				<a href="https://www.facebook.com/Virufy/" target="_blank">
 					<i class="icon fab fa-facebook-f fa-3x"></i>
-				</a>										
+				</a>
 				<a href="mailto:info@virufy.org">
 					<i class="fas fa-envelope fa-3x"></i>
 				</a>
