Integrated Liz's feedback
Co-authored-by: Saad Siddiqui<SMS-NED16@users.noreply.github.com>
Co-authored-by: Muhammad Hasham Khalid<Muhammad-Hasham-Khalid@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<!-- Favicon -->
 	<link rel="icon" href="images/logo.png" type="image/x-icon" />
-	
+
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165560709-1"></script>
 	<script>
@@ -42,13 +42,13 @@
 			</a>
 			<nav id="nav">
 				<a href="index.html">Home</a>
-				<a href="#about">About</a>
-				<a href="#collaborators">Collaborators</a>
+				<!-- <a href="#about">About</a>
+				<a href="#collaborators">Collaborators</a> -->
 				<a href="./team.html">Team</a>
 				<a href="./goals.html">Goals</a>
 				<a href="./join.html">Join Us</a>
 				<a href="https://www.gofundme.com/f/virufy" target="_blank">Donate</a>
-				<a href="mailto:info@virufy.org">Contact</a>
+				<!-- <a href="mailto:info@virufy.org">Contact</a> -->
 			</nav>
 			<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 		</div>
@@ -96,13 +96,13 @@
 			</h1>
 			<h1 style="font-size: medium;">
 				<div class="align-justify">
-					A tiny virus has brought society to a halt, while teaching us that we need to forget about fame and
+					<!-- A tiny virus has brought society to a halt, while teaching us that we need to forget about fame and
 					fortune and instead unite as a species globally!
-					<br><br>
+					<br><br> -->
 					Our vision is to develop a smartphone app that can be used by everyone in the world to find out in
 					minutes whether they have COVID-19. We are utilizing cutting-edge artificial intelligence technology to
 					identify patterns undetectable by humans from the unique respiratory signatures of lungs damaged by the
-					virus. From extensive research, we believe we can achieve 90% or more accuracy and bring an end to this
+					virus. From extensive research, we believe we can achieve 90% or more accuracy and help control this
 					pandemic!
 					<br><br>
 					<b>We hope to create a near future with:</b><br>
@@ -112,7 +112,7 @@
 				</div>
 			</h1>
 			<h1 style="font-size: x-large; color: #66cc91;">
-				How Can You Help?
+				How You Can Help?
 			</h1>
 			<h1 style="font-size: medium;">
 				<div class="align-justify">
@@ -122,9 +122,16 @@
 					audio signatures of COVID-19 infection.
 
 					You can also support our <a href="https://www.gofundme.com/f/virufy">GoFundMe</a>
-					and help spread the word (Twitter, LinkedIn, Facebook, Instagram). We need funds to cover our basic costs (PPE, internet).
+					and help spread the word (<a href="https://twitter.com/VirufyOrg" target="_blank" style="color: #6cc091">Twitter</a>, <a href="https://www.linkedin.com/company/virufy/" target="_blank" style="color: #6cc091">LinkedIn</a>, <a href="https://www.facebook.com/Virufy/" target="_blank" style="color: #6cc091">Facebook</a>, Instagram). We need funds to cover our basic costs (PPE, internet).
 					Even small donations will greatly accelerate efforts
 					of our Pakistan teams.
+					
+
+					<div class="align-center" style="margin: 3% 0">
+					<button type="button" name="button">
+						<a href="https://www.gofundme.com/f/virufy" target="_blank">Donate</a>
+					</button>
+					</div>
 				</div>
 			</h1>
 			<h1 style="font-size: x-large; color: #66cc91;">
