--- a/goals.html
+++ b/goals.html
@@ -41,13 +41,13 @@
             </a>
             <nav id="nav">
                 <a href="index.html">Home</a>
-                <a href="./index.html#about">About</a>
-                <a href="./index.html#collaborators">Collaborators</a>
+                <!-- <a href="./index.html#about">About</a>
+                <a href="./index.html#collaborators">Collaborators</a> -->
                 <a href="./team.html">Team</a>
                 <a href="./goals.html">Goals</a>
                 <a href="./join.html">Join Us</a>
                 <a href="https://www.gofundme.com/f/virufy" target="_blank">Donate</a>
-                <a href="mailto:info@virufy.org">Contact</a>
+                <!-- <a href="mailto:info@virufy.org">Contact</a> -->
             </nav>
             <a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
         </div>
