--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					audio signatures of COVID-19 infection.
 
 					You can also support our <a href="https://www.gofundme.com/f/virufy">GoFundMe</a>
-					and help spread the word (<a href="https://twitter.com/VirufyOrg" target="_blank" style="color: #6cc091">Twitter</a>, <a href="https://www.linkedin.com/company/virufy/" target="_blank" style="color: #6cc091">LinkedIn</a>, <a href="https://www.facebook.com/Virufy/" target="_blank" style="color: #6cc091">Facebook</a>, Instagram). We need funds to cover our basic costs (PPE, internet).
+					and help spread the word (<a href="https://twitter.com/VirufyOrg" target="_blank" style="color: #6cc091">Twitter</a>, <a href="https://www.linkedin.com/company/virufy/" target="_blank" style="color: #6cc091">LinkedIn</a>, <a href="https://www.facebook.com/Virufy/" target="_blank" style="color: #6cc091">Facebook</a>). We need funds to cover our basic costs (PPE, internet).
 					Even small donations will greatly accelerate efforts
 					of our Pakistan teams.
 
