add how we operate

--- a/join.html
+++ b/join.html
@@ -60,8 +60,15 @@
 			</header>
 		</div>
 	</section>
-   	<br>
-		<br>
+		<section class="wrapper align-center">
+			<div class="inner">
+							<header id="join">
+					<h2 style="color:#6cc091;">Who We Need?</h2>
+							</header>
+					</div>
+			</section>
+			
+
     <div class="myrow">
         <div class="col col2">
             <h3 style="font-weight: bold;">Marketing</h3>
@@ -78,6 +85,32 @@
 						<p>Our team of students works with machine learning, deep learning, and signal analysis for audio, video, and textual analysis in a medical setting. We welcome students with experience in these domains and mentors with deep expertise that can guide us to build a robust solution as soon as possible.</p>
 				</div>
     </div>
+
+		<section class="wrapper align-center">
+			<div class="inner">
+							<header id="join">
+					<h2 style="color:#6cc091;">How We Operate?</h2>
+							</header>
+					</div>
+			</section>
+	
+			<div class="myrow">
+					<div class="col">     
+							<i class="fas fa-users"></i>
+							<p>Student-Run</p>
+					</div>
+	
+					<div class="col">
+							<i class="fas fa-code"></i>
+							<p>Highly Collaborative</p>
+					</div>
+			
+					<div class="col">
+							<i class="fas fa-brain"></i>
+							<p>Mentored</p>
+					</div>
+				
+			</div>
 
     <div class="end">
         <p>Please contact us if you'd like to volunteer!</p>
