update marketing request

--- a/join.html
+++ b/join.html
@@ -71,8 +71,8 @@
 
     <div class="myrow">
         <div class="col col2">
-            <h3 style="font-weight: bold;">Marketing</h3>
-            <p>We're in need of an experienced individual in global outreach, especially for nonprofits and fundraising. We need help to devise our social media outreach plan on various platforms (LinkedIn, Twitter, Facebook). </p>
+            <h3 style="font-weight: bold;">Marketing Expert</h3>
+            <p>We're in need of an individual experienced in global outreach, especially for nonprofits and fundraising, to mentor our students on devising a social media outreach plan using various platforms (LinkedIn, Twitter, Facebook). </p>
         </div>
 
         <div class="col col2">
