--- a/join.html
+++ b/join.html
@@ -74,15 +74,19 @@
             <h3 style="font-weight: bold;">Marketing Expert</h3>
             <p>We're in need of an individual experienced in global outreach, especially for nonprofits and fundraising, to mentor our students on devising a social media outreach plan using various platforms (LinkedIn, Twitter, Facebook). </p>
         </div>
-
         <div class="col col2">
             <h3 style="font-weight: bold;">Content Designer</h3>
             <p>Spreading the word about Virufy requires the use of many graphics and videos. Although our team has a few students skilled in content design, we seek help from an experienced mentor who can help us to develop globally-ready visual content for use on our website, social media channels, and mobile web app.</p>
         </div>
-
+		</div>
+		<div class="myrow">
 				<div class="col col2">
 						<h3 style="font-weight: bold;">AI Engineers and Mentors</h3>
 						<p>Our team of students works with machine learning, deep learning, and signal analysis for audio, video, and textual analysis in a medical setting. We welcome students with experience in these domains and mentors with deep expertise that can guide us to build a robust solution as soon as possible.</p>
+				</div>
+				<div class="col col2">
+						<h3 style="font-weight: bold;">Legal Advisors</h3>
+						<p>Medical in nature, our product has many potential legal ramifications we must consider. We need advice from qualified professionals, especially those with expertise in data privacy, HIPAA, medtech, error-rate liabilities, and global policy.</p>
 				</div>
     </div>
 
