update 3 step, remove comments

--- a/index.html
+++ b/index.html
@@ -42,13 +42,10 @@
 			</a>
 			<nav id="nav">
 				<a href="index.html">Home</a>
-				<!-- <a href="#about">About</a>
-				<a href="#collaborators">Collaborators</a> -->
 				<a href="./team.html">Team</a>
 				<a href="./goals.html">Goals</a>
 				<a href="./join.html">Join Us</a>
 				<a href="https://www.gofundme.com/f/virufy" target="_blank">Donate</a>
-				<!-- <a href="mailto:info@virufy.org">Contact</a> -->
 			</nav>
 			<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 		</div>
@@ -65,22 +62,21 @@
 			<div class="flex">
 				<div>
 					<span class="icon fa-user-md"></span>
-					<h3>Feeling sick</h3>
-					<p>can't go to hospital?</p>
+					<h3>Feeling Sick</h3>
+					<p>and unsure?</p>
 				</div>
 
 				<div>
 					<span class="icon fa-microphone"></span>
 					<h3>Record Symptoms</h3>
-					<p>using your device</p>
+					<p>using your phone</p>
 				</div>
 
 				<div>
 					<span class="icon fa-cogs"></span>
 					<h3>Verify COVID</h3>
-					<p>using<br>Artificial Intelligence</p>
+					<p>with AI</p>
 				</div>
-
 			</div>
 		</div>
 	</section>
@@ -96,9 +92,6 @@
 			</h1>
 			<h1 style="font-size: medium;">
 				<div class="align-justify">
-					<!-- A tiny virus has brought society to a halt, while teaching us that we need to forget about fame and
-					fortune and instead unite as a species globally!
-					<br><br> -->
 					Our vision is to develop a smartphone app that can be used by everyone in the world to find out in
 					minutes whether they have COVID-19. We are utilizing cutting-edge artificial intelligence technology to
 					identify patterns undetectable by humans from the unique respiratory signatures of lungs damaged by the
