--- a/team.html
+++ b/team.html
@@ -58,7 +58,7 @@
 		<div class="inner">
 			<header>
 				<h1>Our Team</h1>
-				<h1 style="font-size: 1em;">A global team run by students and supported by mentors.</h1>
+				<h1 style="font-size: 1em;">A global team of passionate scientists.</h1>
 			</header>
 		</div>
 	</section>
