--- a/index.html
+++ b/index.html
@@ -203,6 +203,14 @@
 						</a>
 					</div>
 				</article>
+			<article>
+				<div class="image">
+					<a href = "http://habib.edu.pk/" target="_blank">
+						<img src="images/habib.jpg." alt = "Pic 03" />
+					</a>
+				</div>
+			</article>
+
 			</div>
 		</div>
 	</section>
