Update email for volunteers

--- a/join.html
+++ b/join.html
@@ -119,7 +119,7 @@
     <div class="end">
         <p>Please contact us if you'd like to volunteer!</p>
         <ul class="actions">
-            <li><a href="mailto:info@virufy.org" class="button">Contact Us</a></li>
+            <li><a href="mailto:join@virufy.org" class="button">Contact Us</a></li>
         </ul>
     </div>
 	<!-- Footer -->
