--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 			<article>
 				<div class="image">
 					<a href = "http://habib.edu.pk/" target="_blank">
-						<img src="images/habib.jpg." alt = "Pic 03" />
+						<img src="images/habib-logo.jpg" alt = "Habib University" />
 					</a>
 				</div>
 			</article>
