--- a/app.html
+++ b/app.html
@@ -44,12 +44,12 @@
 			</a>
 			<nav id="nav">
 				<a href="index.html">Home</a>
-				<a href="index.html#about">About</a>
-				<a href="team.html">Team</a>
-				<a href="index.html#sponsors">Sponsors</a>
-				<a href="index.html#collaborators">Collaborators</a>
-				<a href="#">App</a>
-				<a href="#contact">Contact</a>
+				<a href="./team.html">Team</a>
+				<a href="./goals.html">Goals</a>
+				<a href="./join.html">Join Us</a>
+				<a href="https://www.gofundme.com/f/virufy" 
+					target="_blank"><button>Donate</button>
+				</a>
 			</nav>
 			<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 		</div>
