--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
 </head>
 
 <body>
-
+	<!-- Loading FB JS SDK for share/like widget. Recommended placement is right after body tag.
+	See here: https://developers.facebook.com/docs/plugins/like-button -->
+	<div id="fb-root"></div>
+	<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v7.0"></script>
+	
+	
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
@@ -45,7 +50,9 @@
 				<a href="./team.html">Team</a>
 				<a href="./goals.html">Goals</a>
 				<a href="./join.html">Join Us</a>
-				<a href="https://www.gofundme.com/f/virufy" target="_blank">Donate</a>
+				<a href="https://www.gofundme.com/f/virufy" 
+					target="_blank"><button>Donate</button>
+				</a>
 			</nav>
 			<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 		</div>
@@ -120,7 +127,7 @@
 				How You Can Help?
 			</h1>
 			<h1 style="font-size: medium;">
-				<div class="align-justify">
+				<!-- <div class="align-justify">
 					We need help from everyone around the world who has been <b>clinically confirmed positive or negative
 					for COVID-19</b> to spend a few minutes on a smartphone to share anonymous recordings of their
 					breathing and cough sounds. We will use this data to teach our algorithms to keenly recognize the unique
@@ -129,12 +136,45 @@
 					You can also support our <a href="https://www.gofundme.com/f/virufy">GoFundMe</a>
 					and help spread the word (<a href="https://twitter.com/VirufyOrg" target="_blank" style="color: #6cc091">Twitter</a>, <a href="https://www.linkedin.com/company/virufy/" target="_blank" style="color: #6cc091">LinkedIn</a>, <a href="https://www.facebook.com/Virufy/" target="_blank" style="color: #6cc091">Facebook</a>). We need funds to cover our basic costs (PPE, internet).
 					Even small donations will greatly accelerate efforts
-					of our Pakistan teams.
-
+					of our Pakistan teams.					
 					<div class="align-center" style="margin: 3% 0">
 					<button type="button" name="button">
 						<a href="https://www.gofundme.com/f/virufy" target="_blank">Donate</a>
 					</button>
+					</div> -->
+
+				<!-- Cards for Donation, Joining, and Following -->
+				<div class="myrow">
+					<!-- Begin Donate Card -->
+					<div id="gfm-widget-donate" class="col">
+						<h3>Donate</h3>
+						<div class="gfm-embed" 
+							data-url="https://www.gofundme.com/f/virufy/widget/medium">
+						</div>
+					</div>
+
+					<!-- Social Widgets -->
+					<div class="col">
+						<h3>Connect</h3>
+						<!-- Twitter Follow Widget -->
+						<div style="padding: 10% 0%">
+							<a href="https://twitter.com/VirufyOrg?ref_src=twsrc%5Etfw" 
+								class="twitter-follow-button" 
+								data-show-count="false"
+								data-size="large">Follow @VirufyOrg</a>
+							
+							<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+						</div>
+
+						<!--  FB Widgets -->
+						<div class="fb-like" data-href="https://www.facebook.com/Virufy/" data-width="" data-layout="button" data-action="like" data-size="large" data-share="true"></div>
+					</div>
+
+					<!-- Join Team -->
+					<div class="col">
+						<h3>Join</h3>
+						<p>We're always happy to welcome new volunteers to our team.</p>
+						<a class="button" style="margin-top: 5vh" href="./join.html">Open Positions</a>
 					</div>
 				</div>
 			</h1>
@@ -243,7 +283,7 @@
 	<script src="assets/js/skel.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-
+	<script defer src="https://www.gofundme.com/static/js/embed.js"></script>
 </body>
 
 </html>
