--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<a href="./team.html">Team</a>
 				<a href="./goals.html">Goals</a>
 				<a href="./join.html">Join Us</a>
-				<a href="https://www.gofundme.com/f/virufy" 
+				<a href="https://www.gofundme.com/f/virufyorg" 
 					target="_blank"><button>Donate</button>
 				</a>
 			</nav>
@@ -149,7 +149,7 @@
 					<div id="gfm-widget-donate" class="col">
 						<h3>Donate</h3>
 						<div class="gfm-embed" 
-							data-url="https://www.gofundme.com/f/virufy/widget/medium">
+							data-url="https://www.gofundme.com/f/virufyorg/widget/medium">
 						</div>
 					</div>
 
