--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
 				</div>
 			</h1>
 			<h1 style="font-size: x-large; color: #66cc91;">
+				Who We Are?
+			</h1>
+			<h1 style="font-size: medium;">
+				<div class="align-justify">
+				We are a team of AI engineers, mobile web app developers, and medical professionals. All of us are volunteers and most of us are passionate students under 30. From our hearts, we just want to do our best to help the situation and can’t think of anything more noble. We are supported by faculty and professors at our universities.
+				</div>
+			</h1>
+			<h1 style="font-size: x-large; color: #66cc91;">
 				How You Can Help?
 			</h1>
 			<h1 style="font-size: medium;">
