--- a/index.html
+++ b/index.html
@@ -206,13 +206,6 @@
 				</article>
 				<article>
 					<div class="image">
-						<a href="https://jig.jp/" target="_blank">
-							<img src="images/jig-logo.png" alt="Pic 02" />
-						</a>
-					</div>
-				</article>
-				<article>
-					<div class="image">
 						<a href="https://www.duhs.edu.pk/" target="_blank">
 							<img src="images/duhs.png" alt="DUHS">
 						</a>
@@ -232,14 +225,27 @@
 						</a>
 					</div>
 				</article>
-			<article>
-				<div class="image">
-					<a href = "http://habib.edu.pk/" target="_blank">
-						<img src="images/habib-logo.jpg" alt = "Habib University" />
-					</a>
-				</div>
-			</article>
-
+				<article>
+					<div class="image">
+						<a href="https://www.alpas.com.np/" target="_blank">
+							<img src="images/alpas-logo.png" alt="Alpas logo" />
+						</a>
+					</div>
+				</article>
+				<article>
+					<div class="image">
+						<a href="https://jig.jp/" target="_blank">
+							<img src="images/jig-logo.png" alt="Pic 02" />
+						</a>
+					</div>
+				</article>
+				<article>
+					<div class="image">
+						<a href = "http://habib.edu.pk/" target="_blank">
+							<img src="images/habib-logo.jpg" alt = "Habib University" />
+						</a>
+					</div>
+				</article>
 			</div>
 		</div>
 	</section>
