--- a/team.html
+++ b/team.html
@@ -447,6 +447,42 @@
 							class="fa fa-linkedin fa-2x contact-icon"></a>
 					</footer>
 				</article>
+				
+				<article class="team-card">
+					<div class="image round">
+						<img src="images/team/yujesh.jpg" alt="Yujesh Maleku">
+					</div>
+					<header>
+						<h3>Yujesh Maleku</h3>
+						<h4>Marketing and Content Design</h4>
+					</header>
+					<p>
+						Founder & CEO - Alpas Technology
+						<br>Kathmandu, Nepal
+					</p>
+					<footer>
+						<a href="https://www.linkedin.com/in/er-yujesh-maleku-741862113/" target="_blank"
+							class="fa fa-linkedin fa-2x contact-icon"></a>
+					</footer>
+				</article>
+				
+				<article class="team-card">
+					<div class="image round">
+						<img src="images/team/chandan.jpg" alt="Chandan Chaurasia">
+					</div>
+					<header>
+						<h3>Chandan Chaurasia</h3>
+						<h4>Marketing and Content Design</h4>
+					</header>
+					<p>
+						Advisor - Alpas Technology
+						<br>Kathmandu, Nepal
+					</p>
+					<footer>
+						<a href="https://www.linkedin.com/in/chaurasia/" target="_blank"
+							class="fa fa-linkedin fa-2x contact-icon"></a>
+					</footer>
+				</article>
 			</div>
 	</section>
 
