add image alt tag

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 				<article>
 					<div class="image">
 						<a href="http://dicefoundation.org/" target="_blank">
-							<img src="images/dice.jpg" alt="Pic 02" />
+							<img src="images/dice.jpg" alt="DICE Foundation" />
 						</a>
 					</div>
 				</article>
@@ -214,14 +214,14 @@
 				<article>
 					<div class="image">
 						<a href="https://www.neduet.edu.pk/" target="_blank">
-							<img src="images/NEDUET.png" alt="Pic 01" />
+							<img src="images/NEDUET.png" alt="NEDUET" />
 						</a>
 					</div>
 				</article>
 				<article>
 					<div class="image">
 						<a href="https://ssuet.edu.pk/" target="_blank">
-							<img src="images/SSUET.jpg" alt="Pic 02" />
+							<img src="images/SSUET.jpg" alt="SSUET" />
 						</a>
 					</div>
 				</article>
@@ -235,7 +235,7 @@
 				<article>
 					<div class="image">
 						<a href="https://jig.jp/" target="_blank">
-							<img src="images/jig-logo.png" alt="Pic 02" />
+							<img src="images/jig-logo.png" alt="Jig.jp logo" />
 						</a>
 					</div>
 				</article>
