Add open data section to website
Co-authored-by: Saad Hassan <saadhaxxan@users.noreply.github.com>
Co-authored-by: Lucy Shen <zhushen3128@users.noreply.github.com>

--- a/data.html
+++ b/data.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>VIRUFY</title>
+	<title>Virufy Open Dataset</title>
 
 	<!-- Metatags -->
 	<meta charset="utf-8" />
@@ -56,72 +56,36 @@
 	<section id="banner">
 		<div class="inner">
 			<header>
-				<h1>Join Us</h1>
+				<h1>Open Data</h1>
+				<h1 style="font-size: 1em;">We have decided to open source our COVID-19 cough datasets.</h1>
 			</header>
 		</div>
 	</section>
 		<section class="wrapper align-center">
 			<div class="inner">
-							<header id="join">
-					<h2 style="color:#6cc091;">Who We Need?</h2>
-							</header>
-					</div>
-			</section>
-			
-
-    <div class="myrow">
-        <div class="col col2">
-            <h3 style="font-weight: bold;">Marketing Expert</h3>
-            <p>We're in need of an individual experienced in global outreach, especially for nonprofits and fundraising, to mentor our students on devising a social media outreach plan using various platforms (LinkedIn, Twitter, Facebook). </p>
-        </div>
-        <div class="col col2">
-            <h3 style="font-weight: bold;">Content Designer</h3>
-            <p>Spreading the word about Virufy requires the use of many graphics and videos. Although our team has a few students skilled in content design, we seek help from an experienced mentor who can help us to develop globally-ready visual content for use on our website, social media channels, and mobile web app.</p>
-        </div>
-		</div>
-		<div class="myrow">
-				<div class="col col2">
-						<h3 style="font-weight: bold;">AI Engineers and Mentors</h3>
-						<p>Our team of students works with machine learning, deep learning, and signal analysis for audio, video, and textual analysis in a medical setting. We welcome students with experience in these domains and mentors with deep expertise that can guide us to build a robust solution as soon as possible.</p>
-				</div>
-				<div class="col col2">
-						<h3 style="font-weight: bold;">Legal Advisors</h3>
-						<p>Medical in nature, our product has many potential legal ramifications we must consider. We need advice from qualified professionals, especially those with expertise in data privacy, HIPAA, medtech, error-rate liabilities, and global policy.</p>
-				</div>
-    </div>
-
-		<section class="wrapper align-center">
-			<div class="inner">
-							<header id="join">
-					<h2 style="color:#6cc091;">How We Operate?</h2>
-							</header>
-					</div>
-			</section>
-	
-			<div class="myrow">
-					<div class="col">     
-							<i class="fas fa-users"></i>
-							<p>Student-Run</p>
-					</div>
-	
-					<div class="col">
-							<i class="fas fa-code"></i>
-							<p>Highly Collaborative</p>
-					</div>
-			
-					<div class="col">
-							<i class="fas fa-brain"></i>
-							<p>Mentored</p>
-					</div>
-				
+				<header id="why">
+					<h2 style="color:#6cc091;">Why?</h2>
+					<h2 style="font-size: 1em;">The COVID-19 pandemic is extremely detrimental to society and we need to all work together to overcome it. AI needs big data to work and we are unaware of any open source COVID-19 cough datasets anywhere in the world. We want to benefit humanity and have decided to be pioneers in open sourcing the first free COVID-19 cough dataset. This will spur innovation and collaboration from academia and industry all over the world.</h2>
+				</header>
 			</div>
-
-    <div class="end">
-        <p>Please contact us if you'd like to volunteer!</p>
-        <ul class="actions">
-            <li><a href="mailto:join@virufy.org" class="button">Contact Us</a></li>
-        </ul>
-    </div>
+			<div class="inner">
+					<header id="data">
+						<h2 style="color:#6cc091;">Data Source</h2>
+						<h2 style="font-size: 1em;">Our data is very high quality because it was collected at a hospital under supervision by physicians following Standard Operating Procedures (SOP). Our data is preprocessed and labeled with COVID-19 status (acquired from PCR testing), along with patient demographics (age, gender, medical history).</h2>
+					</header>
+			<div class="inner">
+					<header id="get-started">
+						<h2 style="color:#6cc091;">Get Started</h2>
+						<h2 style="font-size: 1em;">Our data and instructions for usage can be found on <a href="https://github.com/virufy/covid/data">our GitHub page</a>. Our cough and textual models for processing the data are also uploaded.</h2>
+					</header>
+			</div>
+			<div class="inner">
+					<header id="contact">
+						<h2 style="color:#6cc091;">Collabration</h2>
+						<h2 style="font-size: 1em;">We warmly welcome review of our data and code. We hope to create a community of researchers driven to use this data to create solutions for the pandemic. Please email us at <a href="mailto:open-data@virufy.org">open-data@virufy.org</a> if you are interested.</h2>
+					</header>
+			</div>
+	</section>
 	<!-- Footer -->
 	<footer id="footer">
 		<div class="inner">
