--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 			</a>
 			<nav id="nav">
 				<a href="index.html">Home</a>
+				<a href="data.html">Open Data</a>
 				<a href="./team.html">Team</a>
 				<a href="./goals.html">Goals</a>
 				<a href="./join.html">Join Us</a>
