--- a/app.html
+++ b/app.html
@@ -23,14 +23,18 @@
 	<!-- Favicon -->
 	<link rel="icon" href="images/logo.png" type="image/x-icon" />
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165690517-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165690517-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-165690517-1');
-</script>
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-165690517-1');
+
+	</script>
 
 </head>
 
@@ -47,8 +51,7 @@
 				<a href="./team.html">Team</a>
 				<a href="./goals.html">Goals</a>
 				<a href="./join.html">Join Us</a>
-				<a href="https://www.gofundme.com/f/virufy" 
-					target="_blank"><button>Donate</button>
+				<a href="https://www.gofundme.com/f/virufy" target="_blank"><button>Donate</button>
 				</a>
 			</nav>
 			<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
@@ -70,23 +73,12 @@
 		<div class="inner">
 			<form method="POST" enctype="multipart/form-data" id="myForm">
 				<!-- Break -->
-				<label><span class="is-required">*</span>Has the patient given consent for participating in this
-					research (link) ? </label>
-				<div class="4u 12u$(small)">
-					<input type="radio" id="demo-priority-low" name="research_consent" value="Yes" checked>
-					<label for="demo-priority-low">Yes</label>
-				</div>
-				<div class="4u 12u$(small)">
-					<input type="radio" id="demo-priority-normal" name="research_consent" value="No">
-					<label for="demo-priority-normal">No</label>
-				</div>
-				<!-- Break -->
 				<div class="row uniform">
 					<div class="6u 12u$(xsmall)">
 						<input type="text" name="age" id="age" placeholder="Age" />
 					</div>
 				</div>
-				<!-- Break -->
+				<!-- Break
 				<div class="row uniform">
 					<div class="12u 12u$(small)">
 						<label><span class="is-required">*</span>Gender</label>
@@ -101,48 +93,7 @@
 						<input type="radio" id="other" name="gender" value="Other">
 						<label for="other">Other</label>
 					</div>
-				</div>
-				<!-- Break -->
-				<!-- Break -->
-				<div class="row uniform">
-					<div class="6u$">
-						<label><span class="is-required">*</span>Country</label>
-						<div class="select-wrapper">
-							<select name="country" id="demo-category" placeholder="Select a Country">
-								<option value="">- Country -</option>
-								<option value="Pakistan">Pakistan</option>
-								<option value="Japan">Japan</option>
-								<option value="USA">USA</option>
-							</select>
-						</div>
-					</div>
-				</div>
-				<!-- Break -->
-				<!-- Break -->
-
-				<div class="row uniform">
-					<div class="6u 12u$(small)">
-						<label><span class="is-required">*</span>Patient ID</label>
-						<input type="text" name="patient_id" id="patient_id" value=""
-							placeholder="Please enter the same Patient ID as used on the patient consent form *" />
-					</div>
-				</div>
-				<!-- Break -->
-				<div class="row uniform">
-					<div class="12u 12u$(small)">
-						<label><span class="is-required">*</span>Corona Test</label>
-						<input type="radio" id="Positive" name="condition" value="Positive" checked>
-						<label for="Positive">Positive</label>
-					</div>
-					<div class="12u 12u$(small)">
-						<input type="radio" id="Negative" name="condition" value="Negative">
-						<label for="Negative">Negative</label>
-					</div>
-					<div class="12u$ 12u$(small)">
-						<input type="radio" id="not tested" name="condition" value="Not tested">
-						<label for="not tested">Not tested</label>
-					</div>
-				</div>
+				</div> -->
 				<!-- Break -->
 				<div class="row uniform">
 					<div id="cough">
@@ -155,23 +106,13 @@
 				<div id="formats">Format: start recording to see sample rate</div>
 				<p><strong>Recordings:</strong></p>
 				<ol id="recordingsList"></ol>
-				<!-- Break -->
 
-				<div class="row uniform"><br>
-					<label>Please upload 15-second video(s) of the patient's index fingertip pressed down on the
-						smartphone camera with flash turned on.<span
-							onclick="show_instructions_video()">(instructions)</span> Optional</label>
-					<div class="6u 6u$(xsmall)">
-						<input type="file" name="video" id="video" type="file" placeholder="patient id" />
-					</div>
-				</div>
 				<!-- Break -->
 				<div class="row uniform">
 					<div class="6u 12u$(small)">
 						<label><span class="is-required">*</span>Patient Reported Symptoms </span><br><br>
 
-							<input type="checkbox" id="roundtrip1" name="reported_symptoms"
-								value="Fever, chills, or sweating">
+							<input type="checkbox" id="roundtrip1" name="reported_symptoms" value="Fever, chills, or sweating">
 							<label for="roundtrip1">Fever, chills, or sweating</label>
 							<br>
 
@@ -179,8 +120,7 @@
 							<label for="roundtrip2">Shortness of breath</label>
 
 							<br>
-							<input type="checkbox" id="roundtrip3" name="reported_symptoms"
-								value="New or worsening cough">
+							<input type="checkbox" id="roundtrip3" name="reported_symptoms" value="New or worsening cough">
 							<label for="roundtrip3"> New or worsening cough</label>
 							<br>
 
@@ -208,8 +148,7 @@
 					<div class="6u 12u$(small)">
 						<label><span class="is-required">*</span>Medical History</label>
 
-						<input type="checkbox" id="roundtrip01" name="medical_history"
-							value="Asthma or chronic lung disease">
+						<input type="checkbox" id="roundtrip01" name="medical_history" value="Asthma or chronic lung disease">
 						<label for="roundtrip01">Asthma or chronic lung disease</label>
 						<br>
 
@@ -217,8 +156,7 @@
 						<label for="roundtrip02">Pregnancy</label>
 
 						<br>
-						<input type="checkbox" id="roundtrip03" name="medical_history"
-							value="Diabetes with complications">
+						<input type="checkbox" id="roundtrip03" name="medical_history" value="Diabetes with complications">
 						<label for="roundtrip03">Diabetes with complications</label>
 						<br>
 
@@ -255,28 +193,13 @@
 						<label for="N">No</label>
 					</div>
 					<!-- Break -->
-					<!-- Break -->
-					<div class="row uniform"><br>
-						<div class="12u 12u$(small)">
-							<label><span class="is-required">*</span>Patient Location </label>
-							<input type="radio" id="Home" name="location" value="Home">
-							<label for="Home">Home</label>
-						</div>
-						<div class="12u 12u$(small)">
-							<input type="radio" id="Clinical Setting" name="location" value="Clinical Setting">
-							<label for="Clinical Setting">Clinical setting</label>
-						</div>
-						<!-- Break -->
-
-
-						<!-- Break -->
-						<div class="12u$">
-							<ul class="actions">
-								<li><input type="button" value="Submit" id="submit" onclick="submit_data()" /></li>
-								<li><input type="reset" value="Reset" /></li>
-							</ul>
-						</div>
+					<div class="12u$">
+						<ul class="actions">
+							<li><input type="button" value="Submit" id="submit" onclick="submit_data()" /></li>
+							<li><input type="reset" value="Reset" /></li>
+						</ul>
 					</div>
+				</div>
 			</form>
 			<hr />
 		</div>
