Highlight email address on Open Data page

--- a/data.html
+++ b/data.html
@@ -82,7 +82,7 @@
 			<div class="inner">
 					<header id="contact">
 						<h2 style="color:#6cc091;">Collabration</h2>
-						<h2 style="font-size: 1em;">We warmly welcome review of our data and code. We hope to create a community of researchers driven to use this data to create solutions for the pandemic. Please email us at <a href="mailto:open-data@virufy.org">open-data@virufy.org</a> if you are interested.</h2>
+						<h2 style="font-size: 1em;">We warmly welcome review of our data and code. We hope to create a community of researchers driven to use this data to create solutions for the pandemic. Please email us at <a href="mailto:open-data@virufy.org" class="green-highlight">open-data@virufy.org</a> if you are interested.</h2>
 					</header>
 			</div>
 	</section>
