--- a/index.html
+++ b/index.html
@@ -207,6 +207,13 @@
 				</article>
 				<article>
 					<div class="image">
+						<a href="http://stanford.edu/" target="_blank">
+							<img src="images/stanford-logo.png" alt="Stanford logo" />
+						</a>
+					</div>
+				</article>
+				<article>
+					<div class="image">
 						<a href="https://www.duhs.edu.pk/" target="_blank">
 							<img src="images/duhs.png" alt="DUHS">
 						</a>
