Change GitHub data link colour to green

--- a/data.html
+++ b/data.html
@@ -76,7 +76,7 @@
 			<div class="inner">
 					<header id="get-started">
 						<h2 style="color:#6cc091;">Get Started</h2>
-						<h2 style="font-size: 1em;">Our data and instructions for usage can be found on <a href="https://github.com/virufy/covid/tree/master/data">our GitHub page</a>. Our cough and textual models for processing the data are also uploaded.</h2>
+						<h2 style="font-size: 1em;">Our data and instructions for usage can be found on <a href="https://github.com/virufy/covid/tree/master/data" class="green-highlight">our GitHub page</a>. Our cough and textual models for processing the data are also uploaded.</h2>
 					</header>
 			</div>
 			<div class="inner">
