--- a/data.html
+++ b/data.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Virufy Open Dataset</title>
+	<title>Virufy Open Dataset | Virufy</title>
 
 	<!-- Metatags -->
 	<meta charset="utf-8" />
