--- a/goals.html
+++ b/goals.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-    <title>VIRUFY</title>
+    <title>Goals | Virufy</title>
 
     <!-- Metatags -->
     <meta charset="utf-8" />
