--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 			</header>
 			<div class="flex flex-4">
 				<article>
-					<div class="image">
+					<div class="image collab">
 						<a href="https://responselab.stanford.edu/" target="_blank">
 							<img src="images/stanford-covid-logo.png" alt="Stanford COVID Response Lab" />
 						</a>
@@ -202,56 +202,56 @@
 				</article>
 
 				<article>
-					<div class="image">
+					<div class="image collab">
 						<a href="http://dicefoundation.org/" target="_blank">
 							<img src="images/dice.jpg" alt="DICE Foundation" />
 						</a>
 					</div>
 				</article>
 				<article>
-					<div class="image">
+					<div class="image collab">
 						<a href="http://stanford.edu/" target="_blank">
 							<img src="images/stanford-logo.png" alt="Stanford logo" />
 						</a>
 					</div>
 				</article>
 				<article>
-					<div class="image">
+					<div class="image collab">
 						<a href="https://www.duhs.edu.pk/" target="_blank">
 							<img src="images/duhs.png" alt="DUHS">
 						</a>
 					</div>
 				</article>
 				<article>
-					<div class="image">
+					<div class="image collab">
 						<a href="https://www.neduet.edu.pk/" target="_blank">
 							<img src="images/NEDUET.png" alt="NEDUET" />
 						</a>
 					</div>
 				</article>
 				<article>
-					<div class="image">
+					<div class="image collab">
 						<a href="https://ssuet.edu.pk/" target="_blank">
 							<img src="images/SSUET.jpg" alt="SSUET" />
 						</a>
 					</div>
 				</article>
 				<article>
-					<div class="image">
+					<div class="image collab">
 						<a href="https://www.alpas.com.np/" target="_blank">
 							<img src="images/alpas-logo.png" alt="Alpas logo" />
 						</a>
 					</div>
 				</article>
 				<article>
-					<div class="image">
+					<div class="image collab">
 						<a href="https://jig.jp/" target="_blank">
 							<img src="images/jig-logo.png" alt="Jig.jp logo" />
 						</a>
 					</div>
 				</article>
 				<article>
-					<div class="image">
+					<div class="image collab">
 						<a href = "http://habib.edu.pk/" target="_blank">
 							<img src="images/habib-logo.jpg" alt = "Habib University" />
 						</a>
