Added #about scrolling
Co-authored-by: Muhammad Hasham Khalid <Muhammad-Hasham-Khalid@users.noreply.github.com>
Co-authored-by: Saad Siddiqui <SMS-NED16@users.noreply.github.com>

--- a/goals.html
+++ b/goals.html
@@ -39,16 +39,16 @@
             <a href="index.html" class="logo">
                 <img src="images/logo.png">
             </a>
-			<nav id="nav">
-				<a href="index.html">Home</a>
-				<a href="data.html">Open Data</a>
-				<a href="./team.html">Team</a>
-				<a href="./goals.html">Goals</a>
-				<a href="./join.html">Join Us</a>
-				<a href="https://www.gofundme.com/f/virufyorg" 
-					target="_blank"><button>Donate</button>
-				</a>
-			</nav>
+            <nav id="nav">
+                <a href="index.html">Home</a>
+                <a href="data.html">Open Data</a>
+                <a href="./index.html#about">About</a>
+                <a href="./team.html">Team</a>
+                <a href="./goals.html">Goals</a>
+                <a href="./join.html">Join Us</a>
+                <a href="https://www.gofundme.com/f/virufyorg" target="_blank"><button>Donate</button>
+                </a>
+            </nav>
             <a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
         </div>
     </header>
