--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 			<nav id="nav">
 				<a href="index.html">Home</a>
 				<a href="data.html">Open Data</a>
+				<a href="#about">About</a>
 				<a href="./team.html">Team</a>
 				<a href="./goals.html">Goals</a>
 				<a href="./join.html">Join Us</a>
-				<a href="https://www.gofundme.com/f/virufyorg" 
-					target="_blank"><button>Donate</button>
+				<a href="https://www.gofundme.com/f/virufyorg" target="_blank"><button>Donate</button>
 				</a>
 			</nav>
 			<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
