--- a/team.html
+++ b/team.html
@@ -41,6 +41,7 @@
 			<nav id="nav">
 				<a href="index.html">Home</a>
 				<a href="data.html">Open Data</a>
+				<a href="./index.html#about">About</a>
 				<a href="./team.html">Team</a>
 				<a href="./goals.html">Goals</a>
 				<a href="./join.html">Join Us</a>
