Reorganize content into HTML hierarchy for SEO.
Co-authored-by: Muhammad Hasham Khalid <Muhammad-Hasham-Khalid@users.noreply.github.com>
Co-authored-by: Saad Siddiqui <SMS-NED16@users.noreply.github.com>

--- a/join.html
+++ b/join.html
@@ -60,68 +60,64 @@
 			</header>
 		</div>
 	</section>
-		<section class="wrapper align-center">
-			<div class="inner">
-							<header id="join">
-					<h2 style="color:#6cc091;">Who We Need?</h2>
-							</header>
-					</div>
-			</section>
-			
 
-    <div class="myrow">
-        <div class="col col2">
-            <h3 style="font-weight: bold;">Marketing Expert</h3>
-            <p>We're in need of an individual experienced in global outreach, especially for nonprofits and fundraising, to mentor our students on devising a social media outreach plan using various platforms (LinkedIn, Twitter, Facebook). </p>
-        </div>
-        <div class="col col2">
-            <h3 style="font-weight: bold;">Content Designer</h3>
-            <p>Spreading the word about Virufy requires the use of many graphics and videos. Although our team has a few students skilled in content design, we seek help from an experienced mentor who can help us to develop globally-ready visual content for use on our website, social media channels, and mobile web app.</p>
-        </div>
-		</div>
+
+	<section class="wrapper align-center inner">
+		<!-- This is to match the `About Us` section on the main page
+		It has a custom style that sets font size to 48px -->
+		<h1 style="font-size: 48px">Who We Need</h1>
+
 		<div class="myrow">
-				<div class="col col2">
-						<h3 style="font-weight: bold;">AI Engineers and Mentors</h3>
-						<p>Our team of students works with machine learning, deep learning, and signal analysis for audio, video, and textual analysis in a medical setting. We welcome students with experience in these domains and mentors with deep expertise that can guide us to build a robust solution as soon as possible.</p>
-				</div>
-				<div class="col col2">
-						<h3 style="font-weight: bold;">Legal Advisors</h3>
-						<p>Medical in nature, our product has many potential legal ramifications we must consider. We need advice from qualified professionals, especially those with expertise in data privacy, HIPAA, medtech, error-rate liabilities, and global policy.</p>
-				</div>
-    </div>
+			<div class="col col2">
+				<h2 style="font-weight: bold;">Marketing Expert</h2>
+				<p>We're in need of an individual experienced in global outreach, especially for nonprofits and fundraising, to mentor our students on devising a social media outreach plan using various platforms (LinkedIn, Twitter, Facebook). </p>
+			</div>
+			<div class="col col2">
+				<h2 style="font-weight: bold;">Content Designer</h2>
+				<p>Spreading the word about Virufy requires the use of many graphics and videos. Although our team has a few students skilled in content design, we seek help from an experienced mentor who can help us to develop globally-ready visual content for use on our website, social media channels, and mobile web app.</p>
+			</div>
+		</div>
+	
+		<div class="myrow">
+			<div class="col col2">
+					<h2 style="font-weight: bold;">AI Engineers and Mentors</h2>
+					<p>Our team of students works with machine learning, deep learning, and signal analysis for audio, video, and textual analysis in a medical setting. We welcome students with experience in these domains and mentors with deep expertise that can guide us to build a robust solution as soon as possible.</p>
+			</div>
+			<div class="col col2">
+					<h2 style="font-weight: bold;">Legal Advisors</h2>
+					<p>Medical in nature, our product has many potential legal ramifications we must consider. We need advice from qualified professionals, especially those with expertise in data privacy, HIPAA, medtech, error-rate liabilities, and global policy.</p>
+			</div>
+		</div>
+	</section>
 
-		<section class="wrapper align-center">
-			<div class="inner">
-							<header id="join">
-					<h2 style="color:#6cc091;">How We Operate?</h2>
-							</header>
-					</div>
-			</section>
-	
-			<div class="myrow">
-					<div class="col">     
-							<i class="fas fa-users"></i>
-							<p>Student-Run</p>
-					</div>
-	
-					<div class="col">
-							<i class="fas fa-code"></i>
-							<p>Highly Collaborative</p>
-					</div>
-			
-					<div class="col">
-							<i class="fas fa-brain"></i>
-							<p>Mentored</p>
-					</div>
-				
+	<section class="wrapper align-center inner">
+		<h1 style="font-size: 48px">How We Operate</h1>
+
+		<div class="myrow">
+			<div class="col">     
+					<i class="fas fa-users"></i>
+					<p>Student-Run</p>
 			</div>
 
-    <div class="end">
+			<div class="col">
+					<i class="fas fa-code"></i>
+					<p>Highly Collaborative</p>
+			</div>
+	
+			<div class="col">
+					<i class="fas fa-brain"></i>
+					<p>Mentored</p>
+			</div>
+		</div>
+	</section>
+
+
+    <section class="end inner">
         <p>Please contact us if you'd like to volunteer!</p>
         <ul class="actions">
             <li><a href="mailto:join@virufy.org" class="button">Contact Us</a></li>
         </ul>
-    </div>
+    </section>
 	<!-- Footer -->
 	<footer id="footer">
 		<div class="inner">
