--- a/data.html
+++ b/data.html
@@ -61,31 +61,43 @@
 			</header>
 		</div>
 	</section>
-		<section class="wrapper align-center">
-			<div class="inner">
-				<header id="why">
-					<h2 style="color:#6cc091;">Why?</h2>
-					<h2 style="font-size: 1em;">The COVID-19 pandemic is extremely detrimental to society and we need to all work together to overcome it. AI needs big data to work and we are unaware of any open source COVID-19 cough datasets anywhere in the world. We want to benefit humanity and have decided to be pioneers in open sourcing the first free COVID-19 cough dataset. This will spur innovation and collaboration from academia and industry all over the world.</h2>
-				</header>
-			</div>
-			<div class="inner">
-					<header id="data">
-						<h2 style="color:#6cc091;">Data Source</h2>
-						<h2 style="font-size: 1em;">Our data is very high quality because it was collected at a hospital under supervision by physicians following Standard Operating Procedures (SOP). Our data is preprocessed and labeled with COVID-19 status (acquired from PCR testing), along with patient demographics (age, gender, medical history).</h2>
-					</header>
-			<div class="inner">
-					<header id="get-started">
-						<h2 style="color:#6cc091;">Get Started</h2>
-						<h2 style="font-size: 1em;">Our data and instructions for usage can be found on <a href="https://github.com/virufy/covid/tree/master/data" class="green-highlight">our GitHub page</a>. Our cough and textual models for processing the data are also uploaded.</h2>
-					</header>
-			</div>
-			<div class="inner">
-					<header id="contact">
-						<h2 style="color:#6cc091;">Collabration</h2>
-						<h2 style="font-size: 1em;">We warmly welcome review of our data and code. We hope to create a community of researchers driven to use this data to create solutions for the pandemic. Please email us at <a href="mailto:open-data@virufy.org" class="green-highlight">open-data@virufy.org</a> if you are interested.</h2>
-					</header>
-			</div>
+
+	<section class="wrapper align-center inner">
+		<div id="why">
+			<h2 class="green-highlight">Why?</h2>
+			<p>
+				The COVID-19 pandemic is extremely detrimental to society and we need to all work together to overcome it.
+				AI needs big data to work and we are unaware of any open source COVID-19 cough datasets anywhere in the world. 
+				We want to benefit humanity and have decided to be pioneers in open sourcing the first free COVID-19 cough dataset. 
+				This will spur innovation and collaboration from academia and industry all over the world.
+			</p>
+		</div>
+		
+		<div id="data">
+			<h2 class="green-highlight">Data Source</h2>
+			<p>
+				Our data is very high quality because it was collected at a hospital under supervision by physicians following Standard Operating Procedures (SOP).
+				Our data is preprocessed and labeled with COVID-19 status (acquired from PCR testing), along with patient demographics (age, gender, medical history).
+			</p>
+		</div>
+
+		<div id="get-started">
+			<h2 class="green-highlight">Get Started</h2>
+			<p>
+				Our data and instructions for usage can be found on <a href="https://github.com/virufy/covid/tree/master/data" class="green-highlight">our GitHub page</a>. 
+				Our cough and textual models for processing the data are also uploaded.
+			</p>
+		</div>
+
+		<div id="contact">
+			<h2 class="green-highlight">Collaboration</h2>
+			<p>
+				We warmly welcome review of our data and code. We hope to create a community of researchers driven to use this data to create solutions for the pandemic. 
+				Please email us at <a href="mailto:open-data@virufy.org" class="green-highlight">open-data@virufy.org</a> if you are interested.
+			</h2>
+		</div>
 	</section>
+	
 	<!-- Footer -->
 	<footer id="footer">
 		<div class="inner">
