Update meta description content

--- a/data.html
+++ b/data.html
@@ -12,7 +12,8 @@
 	<!-- Metatags -->
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description" content="Crowdsourced AI-based COVID-19 Detection">
+	<meta name="description" content="The world's first open-source COVID-19 cough dataset! Build your own COVID-19
+	detection models with Virufy's labeled, high quality cough data.">
 	<meta name="author" content="Team Virufy">
 
 	<link rel="stylesheet" href="assets/css/main.css" />
