--- a/goals.html
+++ b/goals.html
@@ -12,7 +12,8 @@
     <!-- Metatags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Crowdsourced AI-based COVID-19 Detection">
+    <meta name="description" content="AI for Social Good - how Virufy's smartphone app aims to help individuals, communities, and
+    humanity as a whole in the fight against COVID-19.">
     <meta name="author" content="Team Virufy">
 
     <link rel="stylesheet" href="assets/css/main.css" />
