--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	<!-- Metatags -->
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description" content="Crowdsourced AI-based COVID-19 Detection">
+	<meta name="description" content="Virufy - assess your risk for COVID-19 with our AI-powered app using your smartphone. A project of Stanford University's
+	COVID-19 Response Innovation Lab.">
 	<meta name="author" content="Team Virufy">
 
 	<link rel="stylesheet" href="assets/css/main.css" />
