--- a/join.html
+++ b/join.html
@@ -12,7 +12,8 @@
 	<!-- Metatags -->
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description" content="Crowdsourced AI-based COVID-19 Detection">
+	<meta name="description" content="Interested in harnessing the power of AI in the fight against COVID?
+	See how you can get involved and become a part of team Virufy">
 	<meta name="author" content="Team Virufy">
 
 	<link rel="stylesheet" href="assets/css/main.css" />
