--- a/team.html
+++ b/team.html
@@ -12,7 +12,8 @@
 	<!-- Metatags -->
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description" content="Crowdsourced AI-based COVID-19 Detection">
+	<meta name="description" content="Virufy is a global team of passionate young computer scientists mentored by
+	authorities in AI, signal processing, & medicine.">
 	<meta name="author" content="Team Virufy">
 
 	<link rel="stylesheet" href="assets/css/main.css" />
