--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Home | Virufy</title>
+	<title>Verify your COVID-19 risk with a smartphone | Home | Virufy</title>
 
 	<!-- Metatags -->
 	<meta charset="utf-8" />
