--- a/team.html
+++ b/team.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Team | Virufy</title>
+	<title>A global team of passionate scientists | Team | Virufy</title>
 
 	<!-- Metatags -->
 	<meta charset="utf-8" />
