--- a/join.html
+++ b/join.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Join | Virufy</title>
+	<title>Get involved and become a part of Virufy team | Join Us | Virufy</title>
 
 	<!-- Metatags -->
 	<meta charset="utf-8" />
